# simracing_telemetry_exporter

./: .gitignore  CMakeLists.txt  README.md  acc_shmem.h  main.cpp  shmem_reader.cpp
serial/: CMakeLists.txt  serial.cpp  serial.h
serial_telemetry_protocol/: CMakeLists.txt  serial_telemetry_protocol.h
telemetry_packer/: CMakeLists.txt  telemetry_packer.cpp  telemetry_packer.h
